Revert "Revert "Merge remote-tracking branch 'origin/0.3.0-ppc-draft' into 0.3.0-ppc""
This reverts commit 4b33c0398f813347c98c03eca2931f73b62daf90.